Fix locking in PlatformCALayer https://bugs.webkit.org/show_bug.cgi?id=226062

Reviewed by Tim Horton.

Fix locking issue in PlatformCALayer found by Clang Thread Safety Analysis.
We were locking before querying layerToPlatformLayerMap(), but failing to
do so when adding or removing from layerToPlatformLayerMap().

* platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
(WebCore::WTF_REQUIRES_LOCK):
(WebCore::PlatformCALayer::platformCALayerForLayer):
(WebCore::PlatformCALayerCocoa::commonInit):
(WebCore::PlatformCALayerCocoa::~PlatformCALayerCocoa):
(WebCore::layerToPlatformLayerMap): Deleted.


Canonical link: https://commits.webkit.org/237987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277845 268f45cc-cd09-0410-ab3c-d52691b4dbfc